# illuc

./: .gitignore  AGENTS.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/launcher/: editor.rs  linux.rs  mod.rs  vscode.rs  windows.rs
src-tauri/src/features/launcher/commands/: list_installed_editors.rs  mod.rs  open_file_in_default_editor.rs  open_file_in_editor.rs  open_path_in_default_editor.rs  open_path_in_editor.rs
src-tauri/src/features/launcher/editor/definitions/: android_studio.rs  clion.rs  cursor.rs  datagrip.rs  fleet.rs  geany.rs  goland.rs  intellij_idea.rs  kate.rs  mod.rs  notepadpp.rs  phpstorm.rs  pycharm.rs  rider.rs  rubymine.rs  rustrover.rs  sublime_text.rs  visual_studio_2017.rs  visual_studio_2019.rs  visual_studio_2022.rs  visual_studio_2026.rs  vscode.rs  vscode_insiders.rs  vscodium.rs  webstorm.rs  windsurf.rs  zed.rs
src-tauri/src/features/settings/: default_settings.toml  mod.rs
src-tauri/src/features/settings/commands/: mod.rs  settings_open_in_default_editor.rs
src-tauri/src/features/settings/themes/: amber-monochrome.toml  dark.toml  light.toml
src-tauri/src/features/tasks/: agent_command.rs  diff_watcher.rs  events.rs  mod.rs  task_manager.rs
src-tauri/src/features/tasks/agents/: mod.rs
src-tauri/src/features/tasks/agents/acp/: agent.rs  client.rs  (+10 more)
src-tauri/src/features/tasks/git/: mod.rs
src-tauri/src/features/tasks/models/: agent_kind.rs  agent_kind_availability.rs  mod.rs  task_summary.rs
src-tauri/src/features/token_usage/: mod.rs  openai-pricing.json
src-tauri/src/features/token_usage/commands/: mod.rs  token_usage_get.rs
src-tauri/src/utils/: mod.rs  windows.rs  wsl_pty_helper.py
(+251 files in other folders)
