[package]
name = "illuc"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "illuc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
opening-hours = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
parking_lot = "0.12"
vt100 = "0.16.2"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
notify = "8.2.0"
git2 = "0.20.3"
whoami = "1"
raw-window-handle = "0.6"
agent-client-protocol = { version = "0.9.5", features = ["unstable_session_info_update", "unstable_session_usage"] }
async-trait = "0.1"
tokio = { version = "1", features = ["io-util", "process", "rt", "sync", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
base64 = "0.22"
png = "0.17"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
